fix: modal z-index

--- a/src/css/common/global.scss
+++ b/src/css/common/global.scss
@@ -159,7 +159,7 @@ body {
 .overlay {
   position: fixed;
 
-  z-index: 10;
+  z-index: 9;
 
   top: 0;
   left: 0;
